// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AppHeader /> > should not render the banner when no flags are set 1`] = `
"
  ▝▜▄     Gemini CLI v1.0.0
    ▝▜▄
   ▗▟▀    Authenticated with gemini-api-key /auth
  ▝▀    


Tips for getting started:
1. Create GEMINI.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results
"
`;

exports[`<AppHeader /> > should not render the default banner if shown count is 5 or more 1`] = `
"
  ▝▜▄     Gemini CLI v1.0.0
    ▝▜▄
   ▗▟▀    Authenticated with gemini-api-key /auth
  ▝▀    


Tips for getting started:
1. Create GEMINI.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results
"
`;

exports[`<AppHeader /> > should render the banner with default text 1`] = `
"
  ▝▜▄     Gemini CLI v1.0.0
    ▝▜▄
   ▗▟▀    Authenticated with gemini-api-key /auth
  ▝▀    

╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ This is the default banner                                                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯

Tips for getting started:
1. Create GEMINI.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results
"
`;

exports[`<AppHeader /> > should render the banner with warning text 1`] = `
"
  ▝▜▄     Gemini CLI v1.0.0
    ▝▜▄
   ▗▟▀    Authenticated with gemini-api-key /auth
  ▝▀    

╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ There are capacity issues                                                                        │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯

Tips for getting started:
1. Create GEMINI.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results
"
`;

exports[`<AppHeader /> > should render the full logo when logged out 1`] = `
"
  ▝▜▄    ▗█▀▀▜▙▝█▛▀▀▌▜██▖▟██▘▜█▘▜██▖▝█▛▝█▛
    ▝▜▄  █▌     █▙▟  ▐█▝█▛▐█ ▐█ ▐█▝█▖█▌ █▌
   ▗▟▀   ▜▙ ▝█▛ █▌▝ ▖▐█   ▐█ ▐█ ▐█▝██▌ █▌
  ▝▀      ▀▀▀▀▘ ▀▀▀▀▘▀▀▘  ▀▀▘▀▀▘▀▀▘ ▝▀▀▝▀▀

  Gemini CLI v1.0.0
"
`;
